--- a/templates/about/index.html.twig
+++ b/templates/about/index.html.twig
@@ -4,4 +4,6 @@
 
 {% block body %}
     {% include 'layout/header.html.twig' %}
+
+    <p>Petit projet Symfony 6 de révision sur le thème de Star Wars</p>
 {% endblock %}
