--- a/templates/layout/header.html.twig
+++ b/templates/layout/header.html.twig
@@ -17,6 +17,9 @@
                 <a class="nav-link" href="{{ path('app_planet_index') }}">Planète</a>
             </li>
             <li class="nav-item">
+                <a class="nav-link " href="{{ path('app_contact_form') }}">Contact</a>
+            </li>
+            <li class="nav-item">
                 <a class="nav-link " href="{{ path('app_about') }}">A propos</a>
             </li>
         </ul>
